# SkeletonMinRes

./: CMakeLists.txt  README.md
include/SkeletonMinRes/: Loader.h
src/: SkeletonMinRes.cpp
